# claude-toolkit

./: .gitignore  .oxlintrc.json  AGENTS.md  Cargo.toml  README.md  oxlint.config.ts  package.json  tsconfig.json
.agents/: README.md  agents.json
.agents/intel/: api.md  boundaries.md  calls.md  components.md  data.md  database.md  dependencies.md  env.md  files.md  graph.md  impact.md  imports.md  index.md  overview.md  repo.json  routes.md  symbols.md  tasks.md  testing.md  tooling.md
.claude-plugin/: marketplace.json
.github/workflows/: agent-check.yml  release.yml
crates/agent-toolkit-cli/: Cargo.toml
crates/agent-toolkit-cli/src/: main.rs
crates/agent-toolkit-core/: Cargo.toml
crates/agent-toolkit-core/src/: check.rs  fleet.rs  global_setup.rs  hooks.rs  intel.rs  lib.rs  migrate.rs
global/: AGENTS.md
scripts/: agent-check  build-native.ts  bump-version.ts
src/: cli.ts  native.ts  platform.ts
test/: bump-version.test.ts  native.test.ts
