[package]
name = "agent-toolkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
oxc_allocator = "0.128.0"
oxc_ast = "0.128.0"
oxc_ast_visit = "0.128.0"
oxc_parser = "0.128.0"
oxc_span = "0.128.0"
